<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Spinner
        android:id="@+id/spinSecureTool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <CheckBox
        android:id="@+id/checkOnlyInTrustedList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinSecureTool"
        android:layout_below="@+id/spinSecureTool"
        android:text="@string/str_secureconnection_only_in_trusted_list" />
    
    <CheckBox
        android:id="@+id/strictMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkOnlyInTrustedList"
        android:layout_below="@+id/checkOnlyInTrustedList"
        android:text="@string/str_secureconnection_strictMode" />
    
    <CheckBox
        android:id="@+id/useOnlyFirstIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/strictMode"
        android:layout_below="@+id/strictMode"
        android:checked="true"
        android:text="@string/str_secureconnection_use_only_first_ip" />

    <EditText
        android:id="@+id/urlCheckTimeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/useOnlyFirstIp"
        android:hint="@string/str_secureconnection_url_check_timeout_ms"
        android:inputType="number"
        tools:ignore="TextFields"/>

    <EditText
        android:id="@+id/certificateCheckTimeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/urlCheckTimeout"
        android:hint="@string/str_secureconnection_certificate_check_timeout_ms"
        android:inputType="number"/>

    <AutoCompleteTextView
        android:id="@+id/acUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/useOnlyFirstIp"
        android:layout_below="@+id/certificateCheckTimeout"
        android:layout_toLeftOf="@+id/btnGo"
        android:ems="10"
        android:hint="@string/str_secureconnection_promt_url" />

    <Button
        android:filterTouchesWhenObscured="true"
        android:id="@+id/btnList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkOnlyInTrustedList"
        android:layout_alignBottom="@+id/checkOnlyInTrustedList"
        android:layout_alignParentRight="true"
        android:minWidth="64dp"
        android:text="@string/str_secureconnection_list_button" />

    <Button
        android:filterTouchesWhenObscured="true"
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/acUrl"
        android:layout_alignBottom="@+id/acUrl"
        android:layout_alignRight="@+id/btnList"
        android:minWidth="64dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/str_secureconnection_run_button"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnGo"
        android:padding="4dp"
        android:text="@string/str_secureconnection_promt_result"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>