<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_secure_connectivity_dns_checker"/>

    <View
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical"
        android:background="@color/drawer_list_item_color"
        android:duplicateParentState="true"/>

    <include
        android:id="@+id/dns_checker_button"
        layout="@layout/command_item"/>

    <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_secure_connectivity_cert_validator"/>

    <View
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical"
        android:background="@color/drawer_list_item_color"
        android:duplicateParentState="true"/>

    <include
        android:id="@+id/cert_validator_button"
        layout="@layout/command_item"/>

    <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_secure_connectivity_secure_connection"/>

    <View
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical"
        android:background="@color/drawer_list_item_color"
        android:duplicateParentState="true"/>

    <include
        android:id="@+id/test_secure_connection_button"
        layout="@layout/command_item" />
</LinearLayout>